Closed Bug 604901 Opened 15 years ago Closed 15 years ago

Patch for bug 582466 breaks Quit in Cocoa embedders

Categories

(Core :: Widget: Cocoa, defect)

All
macOS
defect
Not set
major

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- -

People

(Reporter: smichaud, Assigned: smichaud)

References

Details

Attachments

(2 files)

My patch for bug 582466 landed on the trunk yesterday (bug 582466 comment #47). Shortly after it landed I realized it would break Quitting in Cocoa embedders (like Camino). This problem is quite easy to work around: All that's needed is to disable the effects of my patch when running in a Cocoa embedder. Shortly I'll post a patch that does this. Currently there are no "official" Camino builds on the trunk (the most recent ones build on the 1.9.2 branch). And I don't know of any other Cocoa embedders that use our code. So to test the effects of my patch for bug 582466 I had to port it to the 1.9.2 branch and then build Camino off that code. I found that Quitting no longer works unless you do it from the Dock menu. This breakage is worse than what I estimated in bug 582466 comment #49. This fact, plus the fact that there's an easy fix, mean that we should land this fix as soon as possible. Even if there aren't currently any Cocoa embedders that use trunk code, this code will soon get into a release (Firefox 4), and Cocoa embedders will be tempted to start using it.
Blocks: 582466
Attached patch FixSplinter Review
Don't replace the original -[NSApplication terminate:] method if we're running in a Cocoa embedder.
Assignee: nobody → smichaud
Status: NEW → ASSIGNED
Attachment #483744 - Flags: review?(joshmoz)
Here's the 1.9.2-branch patch I tested with (in Camino). It combines my patch for bug 582466 with my patch for this bug (bug 604901).
blocking2.0: --- → ?
Attachment #483744 - Flags: review?(joshmoz)
Attachment #483744 - Flags: review+
Attachment #483744 - Flags: approval2.0+
blocking2.0: ? → -
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: