Bug 604901 -  Patch for bug 582466 breaks Quit in Cocoa embedders. r=josh, a2.0+=josh